--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="tosca">#78B3CE</color>
+    <color name="orange">#F96E2A</color>
+    <color name="light_blue">#C9E6f0</color>
+
+<!--  Warna text global  -->
+    <color name="grey">#3E3E3E</color>
+
+<!--  untuk text yang tidak terlalu ter-highlight & stroke edit text -->
+    <color name="light_grey_text">#CDCDCD</color>
+
+<!--  fill color untuk edit text  -->
+    <color name="light_grey_fill">#F6F6F6</color>
+
 </resources>
