--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,10 @@
     <color name="orange">#F96E2A</color>
     <color name="light_blue">#C9E6f0</color>
 
-<!--  Warna text global  -->
+<!--  text global  -->
     <color name="grey">#3E3E3E</color>
 
-<!--  untuk text yang tidak terlalu ter-highlight & stroke edit text -->
+<!--  text yang tidak terlalu ter-highlight & stroke edit text -->
     <color name="light_grey_text">#CDCDCD</color>
 
 <!--  fill color untuk edit text  -->
