--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+
+<!--  SYSTEM COLOR  -->
+<!--  Palette  -->
     <color name="white">#FFFFFFFF</color>
+    <color name="tosca">#78B3CE</color>
+    <color name="orange">#F96E2A</color>
+    <color name="light_blue">#C9E6f0</color>
+
+<!--  text global  -->
+    <color name="grey">#3E3E3E</color>
+
+<!--  text yang tidak terlalu ter-highlight & stroke edit text -->
+    <color name="light_grey_text">#CDCDCD</color>
+
+<!--  fill color untuk edit text  -->
+    <color name="light_grey_fill">#F6F6F6</color>
+
 </resources>
