--- a/app/src/main/res/layout/activity_daftarpembelian.xml
+++ b/app/src/main/res/layout/activity_daftarpembelian.xml
@@ -5,10 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryActivity"
+    tools:context=".DaftarPembelianActivity"
     android:background="@color/white">
 
-    <!-- Header -->
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
@@ -123,7 +122,7 @@
                     android:textColor="@color/white"
                     android:textSize="10sp"
                     android:layout_gravity="bottom"
-                    style="@style/inter_semibold"/>
+                    style="@style/lexend_semibold"/>
             </LinearLayout>
 
             <!-- Item kedua -->
@@ -197,7 +196,7 @@
                     android:textColor="@color/white"
                     android:textSize="10sp"
                     android:layout_gravity="bottom"
-                    style="@style/inter_semibold"/>
+                    style="@style/lexend_semibold"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
