ubah style button

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -211,5 +211,5 @@
         android:text="Simpan"
         android:textColor="@color/white"
         android:textSize="16sp"
-        style="@style/inter_semibold"/>
+        style="@style/lexend_semibold"/>
 </LinearLayout>
