--- a/app/src/main/res/layout/donation_activity.xml
+++ b/app/src/main/res/layout/donation_activity.xml
@@ -38,8 +38,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="45dp"
-            android:paddingStart="40dp"
-            android:paddingEnd="40dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_upload_image"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_input"
                 android:hint="@string/et_masukkan_nama_makanan"
-                android:textColor="@color/light_grey_text"
+                android:textColor="@color/grey"
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:padding="15dp"
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_input"
                 android:hint="@string/et_masukkan_nama_anda"
-                android:textColor="@color/light_grey_text"
+                android:textColor="@color/grey"
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:padding="15dp"
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_input"
                 android:hint="@string/et_masukkan_jumlah"
-                android:textColor="@color/light_grey_text"
+                android:textColor="@color/grey"
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:padding="15dp"
@@ -156,7 +156,7 @@
                 android:background="@drawable/bg_input"
                 android:hint="@string/et_masukkan_tanggal"
                 android:inputType="numberDecimal"
-                android:textColor="@color/light_grey_text"
+                android:textColor="@color/grey"
                 android:textSize="16sp"
                 android:focusable="false"
                 android:layout_marginTop="16dp"
@@ -177,7 +177,7 @@
                 android:background="@drawable/bg_input"
                 android:hint="@string/et_masukkan_harga"
                 android:inputType="numberDecimal"
-                android:textColor="@color/light_grey_text"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginTop="16dp"
                 android:padding="15dp"
