--- a/app/src/main/res/layout/homepage_activity.xml
+++ b/app/src/main/res/layout/homepage_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:orientation="horizontal">
 
         <!-- Konten di bawah Search Bar -->
@@ -21,17 +22,17 @@
             android:id="@+id/greeting"
             android:layout_width="250dp"
             android:layout_height="130dp"
-            android:src="@drawable/card_greeting"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"/>
+            android:src="@drawable/card_greeting" />
 
         <ImageView
             android:id="@+id/greeting2"
             android:layout_width="250dp"
             android:layout_height="130dp"
-            android:src="@drawable/card_greeting"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"/>
+            android:src="@drawable/card_greeting" />
 
     </LinearLayout>
 
@@ -155,13 +156,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="-10dp"
-        android:layout_marginLeft="16dp">
-
         <ImageView
             android:id="@+id/card3"
             android:layout_width="281dp"
@@ -177,6 +171,5 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"/>
 
-    </LinearLayout>
 
 </LinearLayout>
