--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,129 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="280dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="15dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/contact_card"
-        android:layout_width="280dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        android:orientation="vertical"
+        android:padding="12dp">
+
+        <TextView
+            android:id="@+id/judulPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Judul"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="8dp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="135dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/pc_makanan"
+            android:layout_marginBottom="8dp" />
+
+        <TextView
+            android:id="@+id/detailPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Detail post"
+            android:textSize="14sp"
+            android:lineSpacingExtra="4dp"/>
 
         <LinearLayout
+            android:id="@+id/reactionBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="12dp">
-
-            <TextView
-                android:id="@+id/judulPost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pandu Satria"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="8dp" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:src="@drawable/pc_makanan"
-                android:scaleType="centerCrop"
-                android:layout_marginBottom="8dp" />
+            android:layout_height="36dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@drawable/ellipse_search"
+            android:weightSum="3"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="8dp">
 
             <LinearLayout
-                android:id="@+id/reactionBar"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:background="@drawable/ic_rectangle"
-                android:weightSum="3"
-                android:layout_marginBottom="8dp">
+                android:orientation="horizontal">
 
-                <!-- reaction 1 -->
-                <LinearLayout
-                    android:id="@+id/react1"
-                    android:layout_width="0dp"
+                <ImageView
+                    android:id="@+id/emot1"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/emot_smile" />
+
+                <TextView
+                    android:id="@+id/react1Count"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/emot1"
-                        android:src="@drawable/emot_smile" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="10" />
-                </LinearLayout>
-
-                <!-- reaction 2 -->
-                <LinearLayout
-                    android:id="@+id/react2"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/emot2"
-                        android:src="@drawable/emot_haru" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="10" />
-                </LinearLayout>
-
-                <!-- reaction 3 -->
-                <LinearLayout
-                    android:id="@+id/react3"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/emot3"
-                        android:src="@drawable/emot_hug" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="7" />
-                </LinearLayout>
+                    android:layout_marginStart="4dp" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/detailPost"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Alhamdulillah senang sekali dapat berbagi makanan kepada mereka yang membutuhkan"
-                android:textSize="14sp"
-                android:lineSpacingExtra="4dp"/>
-        </LinearLayout>
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/emot2"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/emot_haru" />
+
+                <TextView
+                    android:id="@+id/react2Count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/emot3"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/emot_hug" />
+
+                <TextView
+                    android:id="@+id/react3Count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
