--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="tosca">#78B3CE</color>
     <color name="orange">#F96E2A</color>
     <color name="light_blue">#C9E6f0</color>
+    <color name="red">#FAFF0101</color>
 
 <!--  text global  -->
     <color name="grey">#3E3E3E</color>
