--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -5,6 +5,214 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".AddFoodActivity">
 
+    <View
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/bg_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </View>
+
+    <TextView
+        android:id="@+id/title"
+        style="@style/inter_semibold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="32dp"
+        android:gravity="top"
+        android:text="Bagikan makanan"
+        android:textColor="@color/grey"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/ic_back"
+        app:layout_constraintEnd_toStartOf="@+id/title"
+        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:layout_marginTop="80dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- Upload foto -->
+            <FrameLayout
+                android:layout_width="280dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:background="@drawable/bg_upload_foto">
+
+                <ImageView
+                    android:src="@drawable/bg_upload_foto"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="100dp"
+                    android:gravity="center"
+                    android:text="Upload foto makanan"
+                    style="@style/inter_regular"
+                    android:textSize="10sp"
+                    android:textColor="@color/light_grey_text"/>
+            </FrameLayout>
+
+            <!-- Form input -->
+
+            <TextView
+                style="@style/inter_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nama makanan"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:paddingTop="30dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <EditText
+                android:id="@+id/et_nama_makanan"
+                android:hint="Masukan nama makanan"
+                android:background="@drawable/et_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/inter_regular"
+                android:textSize="14sp"
+                android:textColorHint="@color/light_grey_text"
+                android:textColor="@color/grey"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <TextView
+                style="@style/inter_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nama restoran/individu"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:paddingTop="10dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <EditText
+                android:id="@+id/et_nama_restoran"
+                android:hint="Nama restoran / individu"
+                android:background="@drawable/et_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/inter_regular"
+                android:textSize="14sp"
+                android:textColorHint="@color/light_grey_text"
+                android:textColor="@color/grey"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <TextView
+                style="@style/inter_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jumlah makanan yang didonasikan"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:paddingTop="10dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <EditText
+                android:id="@+id/et_jumlah"
+                android:hint="Jumlah makanan"
+                android:inputType="number"
+                android:background="@drawable/et_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/inter_regular"
+                android:textSize="14sp"
+                android:textColorHint="@color/light_grey_text"
+                android:textColor="@color/grey"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <TextView
+                style="@style/inter_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tanggal kedaluwarsa"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:paddingTop="10dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <EditText
+                android:id="@+id/et_tanggal"
+                android:hint="Expired date"
+                android:focusable="false"
+                android:background="@drawable/et_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/inter_regular"
+                android:textSize="14sp"
+                android:textColorHint="@color/light_grey_text"
+                android:textColor="@color/grey"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <TextView
+                style="@style/inter_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Harga (Opsional)"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:paddingTop="10dp"
+                android:layout_marginHorizontal="10dp"/>
+
+            <EditText
+                android:id="@+id/et_harga"
+                android:hint="Masukkan harga"
+                android:inputType="number"
+                android:background="@drawable/et_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/inter_regular"
+                android:textSize="14sp"
+                android:textColorHint="@color/light_grey_text"
+                android:textColor="@color/grey"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <!-- Tombol konfirmasi -->
+            <Button
+                android:id="@+id/btn_konfirmasi"
+                android:text="Konfirmasi"
+                android:layout_marginTop="60dp"
+                android:backgroundTint="@color/orange"
+                android:textColor="#FFFFFF"
+                android:layout_width="340dp"
+                android:layout_height="60dp"
+                style="@style/lexend_semibold"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
