--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="80dp"
         android:background="@color/light_blue"
         android:padding="16dp"
         android:orientation="horizontal"
@@ -40,83 +40,10 @@
 
 
     <!-- List Pembelian -->
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_order"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <!-- Item pertama -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="20 April 2025, 14:00"
-                android:textSize="12sp"
-                android:textColor="@color/tosca"
-                style="@style/inter_semibold"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingVertical="8dp">
-
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:src="@drawable/steak_image"
-                    android:contentDescription="Steak sapi"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_marginStart="12dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Steak sapi"
-                        android:textSize="12sp"
-                        android:textColor="@color/grey"
-                        style="@style/inter_semibold"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Prime steaklover"
-                        android:textSize="10sp"
-                        android:textColor="@color/grey"
-                        style="@style/inter_regular"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Rp. 50,000 / 2 porsi"
-                        android:textSize="10sp"
-                        android:textColor="@color/tosca"
-                        style="@style/inter_regular"/>
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/btnBatalkanSteak"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#EB2E2E"
-                    android:text="Batalkan"
-                    android:textColor="@color/white"
-                    android:textSize="10sp"
-                    android:layout_gravity="bottom"
-                    style="@style/inter_semibold"/>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp">
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
