--- a/app/src/main/res/layout/fragment_food_pickup.xml
+++ b/app/src/main/res/layout/fragment_food_pickup.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:text="Ambil secukupnya atau bayar seikhlasnya"
+        android:text="Ini saatnya berbagi dan menikmati manfaatnya"
         android:textColor="@color/grey"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,123 +39,64 @@
         android:id="@+id/filter"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toBottomOf="@+id/subheading">
 
         <RadioButton
             android:id="@+id/rb_dariHati"
-            android:background="@drawable/bg_radio_selected"
+            style="@style/lexend_semibold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:background="@drawable/bg_radio_selected"
             android:button="@null"
             android:gravity="center"
-            android:layout_marginEnd="8dp"
-            android:text="Dari hati"
-            android:textSize="12sp"
-            style="@style/lexend_semibold"
-            android:textColor="@color/white" />
+            android:text="Ambil / beli"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/rb_dariKantong"
-            android:background="@drawable/bg_radio_selected"
+            style="@style/lexend_semibold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:background="@drawable/bg_radio_selected"
             android:button="@null"
             android:gravity="center"
-            android:layout_marginStart="8dp"
-            android:text="Dari kantong"
-            android:textSize="12sp"
-            style="@style/lexend_semibold"
-            android:textColor="@color/white" />
+            android:text="Bagikan makanan"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
-<!--  HANYA SEMENTARA, DEMO PURPOSES ONLY  -->
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_food"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal"
-        android:paddingVertical="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/filter">
 
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="20dp"
-            android:layout_gravity="center"
-            android:contentDescription="Steak sapi"
-            android:src="@drawable/steak_image" />
 
-        <LinearLayout
-            android:id="@+id/cardSteak"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+    </androidx.recyclerview.widget.RecyclerView>
 
-            <TextView
-                style="@style/inter_semibold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Steak sapi"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
-            <TextView
-                style="@style/inter_regular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Prime steaklover"
-                android:textColor="@color/grey"
-                android:textSize="10sp" />
-
-            <TextView
-                style="@style/inter_regular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Tersedia"
-                android:textColor="@color/grey"
-                android:layout_marginEnd="16dp"
-                android:textSize="10sp" />
-
-            <TextView
-                style="@style/inter_regular"
-                android:layout_width="50dp"
-                android:layout_height="20dp"
-                android:layout_gravity="end"
-                android:background="@drawable/bg_availability"
-                android:text="7"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:layout_marginEnd="16dp"
-                android:textSize="12sp" />
-
-            <TextView
-                style="@style/inter_regular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rp. 50,000 / 2 porsi"
-                android:textColor="@color/tosca"
-                android:textSize="10sp" />
-
-            <TextView
-                style="@style/inter_regular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expired : 20 April 2025, 15:00"
-                android:textColor="@color/orange"
-                android:textSize="10sp" />
-        </LinearLayout>
-    </LinearLayout>
+    <View
+        android:id="@+id/btn_add_food"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btn_tambah_donasi"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
