--- a/app/src/main/res/layout/activity_item_teman.xml
+++ b/app/src/main/res/layout/activity_item_teman.xml
@@ -27,8 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama Teman"
-            android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textColor="@color/grey"
+            android:textSize="16sp"
             style="@style/inter_semibold" />
 
         <TextView
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Deskripsi"
-            android:textColor="@color/grey"
-            android:textSize="12sp"
+            android:textColor="@color/tosca"
+            android:textSize="10sp"
             style="@style/inter_regular" />
     </LinearLayout>
 
@@ -49,5 +49,5 @@
         android:text="Ikuti"
         android:textColor="@color/white"
         android:textSize="12sp"
-        style="@style/inter_semibold" />
+        style="@style/lexend_semibold" />
 </LinearLayout>
