--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical"
             android:background="@color/white">
 
-            <!-- Header (Hanya background biru, tanpa panah & teks) -->
+            <!-- Header -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
