--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,7 @@
             android:background="@drawable/bg_input"
             android:textColorHint="@color/light_grey_text"
             style="@style/inter_regular"
+            android:textColor="@color/grey"
             android:textSize="14sp"/>
 
         <TextView
@@ -76,6 +77,7 @@
             android:background="@drawable/bg_input"
             android:textColorHint="@color/light_grey_text"
             style="@style/inter_regular"
+            android:textColor="@color/grey"
             android:textSize="14sp"/>
 
         <TextView
@@ -96,6 +98,7 @@
             android:background="@drawable/bg_input"
             android:textColorHint="@color/light_grey_text"
             style="@style/inter_regular"
+            android:textColor="@color/grey"
             android:textSize="14sp"/>
 
         <Button
